fix: Horizontal overflow

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-style: normal;
-    width: 100vw;
+    width: 100%;
 }
 
 #hourly-pills::-webkit-scrollbar {
